--- a/public/index.html
+++ b/public/index.html
@@ -50,29 +50,9 @@
 
         <div class="row articles-list">
           <div class="col-lg-6 articles">
-          <div cidlass="notes">
-            <h4>Subheading</h4>
-          <!--   <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
- -->
-<!--             <h4>Subheading</h4>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-            <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p> -->
           </div>
+          <div class="col-lg-6 notes">
           </div>
-       <!--    <div class="col-lg-6 articles">
-          <div class="notes">
-            <h4>Subheading</h4> -->
- <!--            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p> -->
-
-<!--             <h4>Subheading</h4>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-            <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p> -->       
-          <!-- </div> -->
-           <!-- </div> -->
         </div>
 
       </main>
