working scrape page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../assets/css/narrow-jumbotron.css" rel="stylesheet">
+    <!-- <link href="../assets/css/narrow-jumbotron.css" rel="stylesheet"> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
@@ -27,11 +27,11 @@
       <header class="header clearfix">
         <nav>
           <ul class="nav nav-pills float-right" id="articlesHeading">
-            <li class="nav-item">
+<!--             <li class="nav-item">
               <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a class="nav-link" id="scrape" href="#">Scrape NYT</a>
+              <a class="nav-link" id="scrape" href="#">Scrape NY Times</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="show-articles" href="javascript:void(0)">Show Articles</a>
@@ -60,7 +60,6 @@
     <script src="browserApp.js"></script>
 
       <footer class="footer">
-        <!-- <p>&copy; Elizabeth Nguyen 2017</p> -->
       </footer>
 
     </div> <!-- /container -->
